# toydb

toykv/: .clang-format  CMakeLists.txt  toykv.cc
toykv/rpc/: Makefile
toykv/rpc/gensrc/: CMakeLists.txt  Ddl_types.cpp  Ddl_types.h  Dml_types.cpp  Dml_types.h  Plan_types.h  Status_types.cpp  Status_types.h  TableMeta.pb.cc  TableMeta.pb.h  ToykvService.cpp  ToykvService.h  ToykvService_server.skeleton.cpp  Toykv_types.h
toykv/rpc/proto/: Makefile  TableMeta.proto
toykv/rpc/thrift/: Ddl.thrift  Dml.thrift  Makefile  Status.thrift  Toykv.thrift
toykv/service/: CMakeLists.txt  toykv_server.cc  toykv_server.h  toykv_service.cc  toykv_service.h
toykv/storage/: CMakeLists.txt  row.cc  row.h  storage.cc  storage.h  table.cc  table.h
toykv/utils/: compiler_util.h  status.h
